Added details page, DTOs and requests service

--- a/SPA/src/app/app.component.html
+++ b/SPA/src/app/app.component.html
@@ -1,1 +1,4 @@
-<app-left-panel></app-left-panel>
+<div class="base">
+    <app-left-panel></app-left-panel>
+    <app-details-page></app-details-page>
+</div>
