--- a/SPA/src/app/Components/left-panel/left-panel.component.less
+++ b/SPA/src/app/Components/left-panel/left-panel.component.less
@@ -1,16 +1,21 @@
 @import "~src/styles.less";
 
 .container {
-    display: flex;
     height: 100vh;
     width: 20vw;
     padding: 5px;
+    overflow: hidden;
 }
 
 .surface {
-    background-color: @onBackgroundColor;
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+    overflow-x: hidden;
     height: 100%;
     width: 100%;
     padding: 5px;
+    gap: 5px;
+    background-color: @onBackgroundColor;
     .rounded-corners-small();
 }
