--- a/SPA/src/app/Components/details-page/details-page.component.less
+++ b/SPA/src/app/Components/details-page/details-page.component.less
@@ -18,9 +18,13 @@
 }
 
 .detailsPanel {
+    display: flex;
+    flex-direction: column;
     width: 100%;
     height: 100%;
     flex-basis: 100%;
     background: none;
-    .rounded-corners-small();
+    overflow-y: auto;
+    gap: 10px;
+    overflow-x: hidden;
 }
