--- a/SPA/src/app/Components/list-entry/list-entry.component.html
+++ b/SPA/src/app/Components/list-entry/list-entry.component.html
@@ -1,7 +1,7 @@
-<button class="entryButton" (click)="OnClick()">
+<button class="entryButton" (click)="OnClick(data)">
     <div class="container">
-        <span class="text">Имя пользователя: {{name}}</span>
-        <br>
-        <span class="text">Идентификатор устройства: {{deviceId}}</span>
+        <span class="text">Имя пользователя: {{data.name}}</span>
+        <span class="text">Идентификатор устройства: {{data._id}}</span>
+        <span class="subText">{{data.entries}} записей</span>
     </div>
 </button>
