--- a/SPA/src/app/Components/list-entry/list-entry.component.less
+++ b/SPA/src/app/Components/list-entry/list-entry.component.less
@@ -24,6 +24,19 @@
     text-overflow: ellipsis;
     text-align: left;
     overflow: hidden;
-    text-wrap: pretty;
+    text-wrap: nowrap;
+    font-size: 12px;
+    padding-block: 5px;
+    color: @onSecondaryContainerColor;
+}
+
+.subText {
+    width: 100%;
+    text-overflow: ellipsis;
+    text-align: left;
+    overflow: hidden;
+    text-wrap: nowrap;
+    font-size: 10px;
+    padding-top: 3px;
     color: @onSecondaryContainerColor;
 }
