Fixed bug with Date parsing from request

--- a/SPA/src/app/Components/detail-entry/detail-entry.component.html
+++ b/SPA/src/app/Components/detail-entry/detail-entry.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <span>
-        Начало активности: {{data.startTime.toLocaleString("en-GB", { timeZone: "UTC" })}}
+        Начало активности: {{data.startTime.toLocaleString()}}
     </span>
     <span>
         Конец активности: {{data.endTime.toLocaleString()}}
