Added ability to download statistics in JSON

--- a/SPA/src/app/Components/detail-entry/detail-entry.component.less
+++ b/SPA/src/app/Components/detail-entry/detail-entry.component.less
@@ -19,11 +19,12 @@
 .deleteButton {
     width: 25px;
     height: 25px;
-    background-color: @onSecondaryContainerColor;
+    background-color: @tertiaryContainerColor;
     .rounded-corners-small();
-    border: none;
+    border-color: #eec0f2;
+    border-style: solid;
     font-size: 10px;
-    color: white;
+    color: @onTertiaryContainerColor;
 
     &:hover {
         cursor: pointer;
