--- a/SPA/src/styles.less
+++ b/SPA/src/styles.less
@@ -3,8 +3,8 @@
 @onBackgroundColor: #dce1f5;
 @secondaryContainerColor: #c3cff3;
 @onSecondaryContainerColor: #3e4759;
-@primaryContainerColor: #d6e3ff;
-@onPrimaryContainerColor: #415f91;
+@tertiaryContainerColor: #fad8fd;
+@onTertiaryContainerColor: #573e5c;
 
 body, html {
     background-color: @backgroundColor;
