--- a/SPA/src/app/Components/left-panel/left-panel.component.less
+++ b/SPA/src/app/Components/left-panel/left-panel.component.less
@@ -2,7 +2,9 @@
 
 .container {
     height: 100vh;
-    width: 30vw;
+    width: fit-content;
+    max-width: 50vw;
+    min-width: 30vh;
     padding: 5px;
     overflow: hidden;
 }
