--- a/SPA/src/app/Components/list-entry/list-entry.component.less
+++ b/SPA/src/app/Components/list-entry/list-entry.component.less
@@ -3,7 +3,7 @@
 .entryButton {
     width: 100%;
     height: 50px;
-    background-color: @secondaryContainerColor;
+    background-color: @primaryContainerColor;
     border: none;
     padding: 5px;
     height: fit-content;
@@ -27,7 +27,7 @@
     text-wrap: nowrap;
     font-size: 12px;
     padding-block: 5px;
-    color: @onSecondaryContainerColor;
+    color: @onPrimaryContainerColor;
 }
 
 .subText {
