--- a/SPA/src/styles.less
+++ b/SPA/src/styles.less
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @backgroundColor: #f9f9ff;
-@onBackgroundColor: #dce1f5;
+@primaryContainerColor: #415f91;
+@onPrimaryContainerColor: #ffffff;
 @secondaryContainerColor: #c3cff3;
 @onSecondaryContainerColor: #3e4759;
 @tertiaryContainerColor: #fad8fd;
@@ -14,6 +15,7 @@ body, html {
 
 * {
     box-sizing: border-box;
+    font-family: 'Source Sans Pro', sans-serif;
 }
 
 .rounded-corners-small() {
