--- a/SPA/src/app/Components/details-page/details-page.component.less
+++ b/SPA/src/app/Components/details-page/details-page.component.less
@@ -13,7 +13,7 @@
     width: 100%;
     height: 100%;
     padding: 10px;
-    background-color: @onBackgroundColor;
+    background-color: @secondaryContainerColor;
     .rounded-corners-small();
 }
 
@@ -38,11 +38,10 @@
     width: fit-content;
     height: fit-content;
     padding: 5px;
-    background-color: @tertiaryContainerColor;
+    background-color: @primaryContainerColor;
     .rounded-corners-small();
-    border-color: #eec0f2;
-    border-style: solid;
-    color: @onTertiaryContainerColor;
+    border: none;
+    color: @onPrimaryContainerColor;
 
     &:hover {
         cursor: pointer;
