--- a/SPA/src/app/Components/left-panel/left-panel.component.less
+++ b/SPA/src/app/Components/left-panel/left-panel.component.less
@@ -18,6 +18,27 @@
     width: 100%;
     padding: 5px;
     gap: 5px;
-    background-color: @onBackgroundColor;
+    background-color: @secondaryContainerColor;
     .rounded-corners-small();
+}
+
+.header {
+    color: @onSecondaryContainerColor;
+    text-align: center;
+    font-size: 25px;
+    padding-block: 10px;
+}
+
+hr {
+    border: none;
+    width: 96%;               
+    background-color: @onSecondaryContainerColor;
+    height: 1px;
+}
+
+.placeholder {
+    text-align: center;
+    color: @onSecondaryContainerColor;
+    font-size: 20px;
+    padding-block: 10px;
 }
