--- a/SPA/src/app/Components/detail-entry/detail-entry.component.html
+++ b/SPA/src/app/Components/detail-entry/detail-entry.component.html
@@ -1,10 +1,10 @@
 <div class="container">
     <div class="info">
         <span>
-            Начало активности: {{data.startTime.toLocaleString()}}
+            Время включения: {{data.startTime.toLocaleString()}}
         </span>
         <span>
-            Конец активности: {{data.endTime.toLocaleString()}}
+            Время выключения: {{data.endTime.toLocaleString()}}
         </span>
         <span>
             Версия: {{data.version}}
